# OpenConquer

./: CMakeLists.txt  README.md  SETUP.bat
Project/: main.cpp
Project/Source/: InputInterface.h  Win32Keys.h  Win32Window.cpp  Win32Window.h  Window.h  WindowInterface.h
Project/Source/Input/: Input.h  InputInterface.h  Win32Input.cpp  Win32Input.h
Project/Source/Renderer/: Renderer.h  RendererInterface.h  Win32DirectX11Renderer.cpp  Win32DirectX11Renderer.h
Project/Source/Renderer/Shaders/: ConstantBufferStructs.hlsli  psTriangle.hlsl  vsTriangle.hlsl
Project/Source/Window/: Win32Window.cpp  Win32Window.h  Window.h  WindowInterface.h
